fix: fixes spacing, tocs and other markdown issues

--- a/docs/_sass/custom/custom.scss
+++ b/docs/_sass/custom/custom.scss
@@ -24,14 +24,15 @@ a:hover {
   text-decoration: underline #eb5c3f !important;
 }
 
-.img-caption {
+.img-caption,
+.table-caption {
   font-size: 0.8em;
 }
 
 :not([class="inline-img"]) {
   > img {
     border-radius: 4px;
-    box-shadow: 0 1px 2px rgba(0, 0, 0, 0.12), 0 3px 10px rgba(0, 0, 0 ,0.08);
+    box-shadow: 0 1px 2px rgba(0, 0, 0, 0.12), 0 3px 10px rgba(0, 0, 0, 0.08);
   }
 }
 
